--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             width: 50px;
             height: 50px;
             background-color: aqua;
+            position: relative;
         }
     </style>
 </head>
@@ -18,8 +19,11 @@
 <!-- <h1 id="hello">hello</h1>
 <button id="change" onclick= changeButton()>change text</button>
  -->
+<!-- <div id="box"></div> -->
 
-<div id="box"></div>
+
+<p id="user"></p>
+<p id="userAge"></p>
 
     
 </body>
