--- a/index.html
+++ b/index.html
@@ -22,8 +22,26 @@
 <!-- <div id="box"></div> -->
 
 
-<p id="user"></p>
-<p id="userAge"></p>
+<!-- <p id="user"></p>
+<p id="userAge"></p> -->
+
+
+<!-- <h1 id="myName"></h1>
+<label for="username">USERNAME</label><br>
+<input type="text" id="input"> <br><br>
+<button id="submit" onclick=" userName() ">submit</button> -->
+
+
+
+<p>log in</p>
+<h1 id="myName"></h1>
+<label for="">username</label>
+<input type="text" id="input">
+<br><br>
+<label for="" >password</label>
+<input type="password" id="password">
+<br><br>
+<button id="submit" onclick =" userName()"> submit </button>
 
     
 </body>
