--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-<p>log in</p>
+<!-- <p>log in</p>
 <h1 id="myName"></h1>
 <label for="">username</label>
 <input type="text" id="input">
@@ -41,7 +41,17 @@
 <label for="" >password</label>
 <input type="password" id="password">
 <br><br>
-<button id="submit" onclick =" userName()"> submit </button>
+<button id="submit" onclick =" userName()"> submit </button> -->
+
+
+<p> CALCULATING CIRCUMFERENCE</p>
+<label for="">radius</label>
+<input type="number" id="input">  <br><br>
+
+<button onclick="calculate()">submit</button>
+<br><br>
+
+<h1 id="answer">answer</h1>
 
     
 </body>
