--- a/index.html
+++ b/index.html
@@ -44,15 +44,23 @@
 <button id="submit" onclick =" userName()"> submit </button> -->
 
 
-<p> CALCULATING CIRCUMFERENCE</p>
+<!-- <p> CALCULATING CIRCUMFERENCE</p>
 <label for="">radius</label>
 <input type="number" id="input">  <br><br>
 
 <button onclick="calculate()">submit</button>
 <br><br>
 
-<h1 id="answer">answer</h1>
+<h1 id="answer">answer</h1> -->
 
+
+<!-- IF STATEMENT -->
+
+<label for="">DRIVING AGE</label> <br><br>
+<input type="number" id="myAge"> <br><br>
+<button id="submit" onclick="submit()">submit</button>
+
+<p id="answer">answer</p>
     
 </body>
 </html>
